// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as touchable 1`] = `
<TouchableHighlight
  activeOpacity={1}
  onPress={[MockFunction]}
  underlayColor="#0001"
>
  <View
    style={
      Array [
        Object {
          "minHeight": 43,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <Label />
    <Action />
    <Image
      source={
        Object {
          "testUri": "../../../src/table/assets/disclosure-indicator.png",
        }
      }
      style={
        Object {
          "flexShrink": 0,
          "height": 12,
          "marginLeft": 10,
          "tintColor": "#c7c7cc",
          "width": 8,
        }
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`should render normally 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  />
  <Label />
  <Action />
</View>
`;

exports[`should render with custom styles 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
  />
  <Label />
  <Action />
</View>
`;
